--- a/Lesson2/Task3.html
+++ b/Lesson2/Task3.html
@@ -5,8 +5,8 @@
     <title>Формы</title>
 </head>
 <body>
-    <p>Name</p><input name="name"  type="text" value="Введите имя">
-    <p>Email</p><input name="e-mail"  type="text" value="Введите e-mail">
+    <label>Name<br><input name="name"  type="text" value="Введите имя"></label><br><br>
+    <lable>Email<br><input name="e-mail"  type="text" value="Введите e-mail"></lable>
 <p>Sex</p>
     <input type="radio" name="answer" value="a1">Male
     <input type="radio" name="answer" value="a2">Female
