--- a/Lesson5/task1.html
+++ b/Lesson5/task1.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>Task6</title>
+    <title>Lesson5 Task1</title>
     <link rel="stylesheet" type="text/css" href="task1.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
             <li><a href="#">Jamaica</a></li>
             <li><a href="#">Las Vegas</a></li>
             <li><a href="#">London</a></li>
-            <li><a href="#">LosAngeles</a></li>
+            <li><a href="#">Los Angeles</a></li>
             <li><a href="#">Miami</a></li>
             <li><a href="#">Montreal</a></li>
             <li><a href="#">Paris</a></li>
