--- a/Lesson5/task1.html
+++ b/Lesson5/task1.html
@@ -9,7 +9,7 @@
 <div id="page_align">
 <div id="header">
 <div id="header_menu">
-<ul>
+<ul class="hover">
     <li><a href="#">Home</a></li>
     <li><a href="#">News</a></li>
     <li><a href="#">Economics</a></li>
