--- a/Project1/project1.html
+++ b/Project1/project1.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="project1.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:600'>
+    
 </head>
 <body>
 	<!--Header-->
@@ -41,25 +42,26 @@ tempor<br> incididunt ut labore et dolore magna aliqua. </span></p>
 <div class="services">
 	<div class="serv_cont">
 		<div class="p_serv"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p></div>
-		<div class="protect"><span class="glyphicons"></span></div>
-		<div class="alert"></div>
-		<div class="detect"></div>	
+		<div class="protect"><img src="lock.jpg"></div>
+		<div class="alert"><img src="flesh.jpg"></div>
+		<div class="detect"><img src="phone.jpg"></div>	
 		<div class="clr"></div>
-		<div class="p_protect"><p>PROTECT</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<div class="p_protect"><p><span class="cap_pro">PROTECT</span></p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat.</p></div>
-		<div class="p_alert"><p>ALERT</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<div class="p_alert"><p><span class="cap_pro">ALERT</span></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat.</p></div>
-		<div class="p_detect"><p>DETECT</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<div class="p_detect"><p><span class="cap_pro">DETECT</span></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat.</p></div>	
 	</div>
 </div>
 <div class="section">
 	<div class="sec_content">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua.</p>
+<p><span class="sec_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua.</span></p>
 <ul>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
@@ -69,7 +71,7 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 </div>
 <div class="pricing">
 	<div class="pri_content">
-	<p>WE HAVE A VERY FLEXIBLE OFFERS FOR YOU TO CHOOSE</p>
+	<p><span class="pri_h_p">WE HAVE A VERY FLEXIBLE OFFERS FOR YOU TO CHOOSE</span></p>
 	<div class="all_price">
 		<div class="standard">
 			<div class="s_head">STANDARD</div>
@@ -80,6 +82,7 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 				<li>Unmetered Databases</li>
 				<li>Unmetered e-mails</li>
 			</ul>
+			<p><input type="submit" value="ENROLL TODAY"></p>
 		</div>
 		<div class="b_value">
 			<div class="b_v_head">BEST VALUE</div>
@@ -90,6 +93,7 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 				<li>Staging or Prodaction</li>
 				<li>Unmetered e-mails</li>
 			</ul>
+			<p><input type="submit" value="ENROLL TODAY"></p>
 		</div>
 		<div class="ultimate">
 			<div class="ult_head">ULTIMATE</div>
@@ -100,7 +104,7 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 				<li>Faster Site, Better Seo</li>
 				<li>Unmetered e-mails</li>
 			</ul>
-
+			<p><input type="submit" value="ENROLL TODAY"></p>
 		</div>
 	</div>	
 </div>
@@ -111,22 +115,31 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 		<div class="content_n"><p><span>WHAT</span> CLIENT SAYS</p></div>
 <div class="photo"><img src="lady.jpg"></div>
 <div class="cust">
-<p class="p_left">Stciya Trollio</p>
-<p class="p_right">Customer</p><br>
-<p class="dot"></p>
-<p> Lorem ipsum</p>
+<p>Stciya Trollio</p>
+<p>Customer</p>
+<p>.....................................................................................</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore. </p>
 </div>
 <div class="photo1"><img src="men.jpg"></div>
 <div class="cust1">
-<p class="p_left">David Sout</p>
-<p class="p_right">Customer</p><br>
-<p class="dot"></p>
-<p> Lorem ipsum</p>
+<p>David Sout</p>
+<p>Customer</p>
+<p>......................................................................................</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore.</p>
 </div>
 </div>
-</div>s
+</div>
 <footer>
-
+	<div class="foot_up">
+<div class="contact">700 345</div>
+<div class="map"></div>
+</div>
+<div class="crl"></div>
+<div class="bot_cont">2121</div>
 </footer>
+
+
 </body>
 </html>
