--- a/Project1/project1.html
+++ b/Project1/project1.html
@@ -10,7 +10,7 @@ IywckVfduigRQhjdjpnbPnmdSpeC9ZOvfNKlNigQ" type="text/javascript"></script>
 <script type="text/javascript">
 function GMapInit() {
 	var map = new GMap2(document.getElementById("GMapContainer"));
-	map.setCenter(new GLatLng(50.43916736, 30.499046), 14);
+	map.setCenter(new GLatLng(50.43916736, 30.499046), 18);
 	map.addControl(new GLargeMapControl()); 
 	map.addControl(new GMapTypeControl());   
 	map.enableScrollWheelZoom(); 
@@ -69,9 +69,9 @@ tempor<br> incididunt ut labore et dolore magna aliqua. </span></p>
 	</div>
 </div>
 <div class="section">
-	<div class="sec_content">
+	<div class="sec_content"><br>
 <p><span class="sec_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua.</span></p>
+tempor incididunt ut labore et dolore...</span></p>
 <ul>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
@@ -122,22 +122,22 @@ tempor incididunt ut labore et dolore magna aliqua.</span></p>
 <div class="test">
 
 	<div class="test_content">
-		<div class="content_n"><p><span>WHAT</span> CLIENT SAYS</p></div>
+		<div class="content_n"><br><p><span>WHAT</span>CLIENT SAYS</p></div>
 <div class="photo"><img src="img/lady.jpg"></div>
 <div class="cust">
-<p>Stciya Trollio</p>
-<p>Customer</p>
-<p>.....................................................................................</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore. </p>
+<p> - Stciya Trollio<span class="f_r">Customer</span></p>
+
+<p class="dash"></p>
+<p class="line">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor. </p>
 </div>
 <div class="photo1"><img src="img/men.jpg"></div>
 <div class="cust1">
-<p>David Sout</p>
-<p>Customer</p>
-<p>......................................................................................</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore.</p>
+<p > - David Sout<span class="f_r">Customer</span></p>
+
+<p class="dash"></p>
+<p class="line">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor.</p>	 
 </div>
 </div>
 </div>
@@ -168,8 +168,9 @@ tempor incididunt ut labore et dolore.</p>
 <div class="crl"></div>
 <div class="bot_cont">
 <div class="bot_conte">
+	<br>
 <p>Copyright Company Name. All rights reserved</p>
- <p>Design by IconicGraphics.com</p>
+ <p>Design by <span class="ig">IconicGraphics.com</span></p>
 </div>
 
 </div>
