--- a/Project1/project1.html
+++ b/Project1/project1.html
@@ -20,7 +20,7 @@ function GMapInit() {
 <body onload="GMapInit()" onunload="GUnload()">
 	<!--Header-->
 <div class="header_nav">
-<div class="logo"><a href="#">Company <span>NAME</span></a></div>
+<div class="logo"><a href="#">Company <span class="lg_name">NAME</span></a></div>
 <div class="menu">
 <ul class="menu_nav">
 <li><a href="#">CONTACT</a></li>
@@ -68,6 +68,7 @@ tempor<br> incididunt ut labore et dolore magna aliqua. </span></p>
 		consequat.</p></div>	
 	</div>
 </div>
+<!--Section-->
 <div class="section">
 	<div class="sec_content"><br>
 <p><span class="sec_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>sed do eiusmod
@@ -79,6 +80,7 @@ tempor incididunt ut labore et dolore...</span></p>
 </ul>
 	</div>
 </div>
+<!--Pric-->
 <div class="pricing">
 	<div class="pri_content">
 	<p><span class="pri_h_p">WE HAVE A VERY FLEXIBLE OFFERS FOR YOU TO CHOOSE</span></p>
@@ -119,6 +121,7 @@ tempor incididunt ut labore et dolore...</span></p>
 	</div>	
 </div>
 </div>
+<!--test-->
 <div class="test">
 
 	<div class="test_content">
