--- a/Project2/index.html
+++ b/Project2/index.html
@@ -132,7 +132,7 @@
 	<p class="p_connect_bot">Connect:</p>
 <ul class="sn">
 		<li class="fb"></li>
-		<li class="g"></li
+		<li class="g"></li>
 		<li class="tw"></li>
 </ul>
 </div>
