--- a/Project2/index.html
+++ b/Project2/index.html
@@ -77,24 +77,24 @@
 </div>
 <div class="main_cont_top">
 	<p class="title_cont">WHY WE ARE BEST</p>
-			<div class="qa_envir">
-	<div class="build_pic"><img src="img/build.jpg"></div>
+	<div class="qa_envir">
+		<div class="build_pic"><img src="img/build.jpg"></div>
 		<p class="qa_title">QUALITY ENVIRONMENT</p>
-		<p class="qa_text">We guide our students to find their own aca-<br>demic paths by helping them to reason, analyze<br> and understand in unprecedented ways. The<br> undergraduate experience at Duke is character-<br>ized by a spirit of academic energy, exploration<br> and challenge.</p>
+		<p class="qa_text">We guide our students to find their own aca-demic paths by helping them to reason, analyze and understand in unprecedented ways. The undergraduate experience at Duke is character-ized by a spirit of academic energy, exploration and challenge.</p>
 		<div class="envir_view"><a href="#"><p>VIEW</p></a></div>
 	</div>
 	<div class="qa_prog">
 	<div class="doct_pic"><img src="img/doct.jpg"></div>
-		<p class="qa_title">QUALITY PROGRAMS</p>
-		<p class="qa_text">We are a research university with resources to connect undergraduate education to the processes of inquiry and discovery. Duke students explore ideas by collaborating directly with our exceptional faculty in a program of study that focuses on interdisciplinary exploration.</p>
-		<div class="envir_view"><a href="#"><p>VIEW</p></a></div>
+		<p class="qa_prog_title">QUALITY PROGRAMS</p>
+		<p class="qa_prog_text">We are a research university with resources to connect undergraduate education to the processes of inquiry and discovery. Duke students explore ideas by collaborating directly with our exceptional faculty in a program of study that focuses on interdisciplinary exploration.</p>
+		<div class="qa_view"><a href="#"><p>VIEW</p></a></div>
 	</div>
 
 	<div class="ex_teacher">
 	<div class="men_pic"><img src="img/men.jpg"></div>
-	<p class="qa_title">EXCELLENT TEACHERS</p>
-	<p class="qa_text">A student's education doesn't end at the classroom door. We provide an incredible variety of opportunities for students to enhance and supplement in-class learning with hands-on experiences, service in the community—both locally and globally—and development of leadership skills.</p>
-	<div class="envir_view"><a href="#"><p>VIEW</p></a></div>
+	<p class="ex_title">EXCELLENT TEACHERS</p>
+	<p class="ex_text">A student's education doesn't end at the class -room door. We provide an incredible variety of opportunities for students to enhance and supplement in-class learning with hands-on experiences, service in the community—both locally and globally—and development of lead.</p>
+	<div class="ex_view"><a href="#"><p>VIEW</p></a></div>
 		</div>
 </div>
 
