--- a/Project2/index.html
+++ b/Project2/index.html
@@ -60,7 +60,7 @@
 	</ul>
          
 </div>
-<h1 class="welcome">WELCOME</h1>
+<p class="welcome">WELCOME</p>
 <p class="welcom_words">College students can publish their couse notes, study together, build their acdemic reputations....</p>
 </div>
 </div>
