--- a/Project2/index.html
+++ b/Project2/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" type="text/css" href="main.css">
        </head>
 <body>
-	<header>
+<header>
 <div class="header">
-<div class="logo">ABC</div>
-<div class="logo_name">ABC University</div>
-<div class="social_network">
-	<p class="p_connect">Connect:</p>
-<ul class="sn">
-		<li class="fb"></li>
-		<li class="g"></li>
-		<li class="tw"></li>
-</ul></div>
-	
+	<div class="logo">ABC</div>
+	<div class="logo_name">ABC University</div>
+	<div class="social_network">
+		<p class="p_connect">Connect:</p>
+			<ul class="sn">
+				<li class="fb"></li>
+				<li class="g"></li>
+				<li class="tw"></li>
+			</ul>
+	</div>
 </div>
 </header>
 
@@ -28,122 +28,89 @@
 <div class="reg_form">
 <p class="reg_title">GET STARTED</p>
 	<ul>
-		<li>
-			<select name="" class="reg_select">
-                    <option value="Select Course">Select Course</option>
-                    <option value="FE">FE</option>
-                    <option value="QA">QA</option>
-                    <option value="JAVA">JAVA</option>
-                </select>
-		</li>
-		<li>
-			<input type="text" name="surname" placeholder="First Name" class="reg">
-		</li>
-		<li>
-			<input type="text" name="surname" placeholder="Last Name" class="reg">  
-		</li>
-		<li>
-			<input type="text" name="phone" placeholder="Phone" class="reg">
-		</li>	
-		<li>
-			<input type="text" name="adress" placeholder="Adress" class="reg" id="adress">
-		</li>
-		<li>
-			<input type="text" name="zip" placeholder="Zip" class="reg">
-		</li>
-		<li>
-			<input type="email" name="email" placeholder="Email" class="reg" >
-		</li>
-		<li>
-		<input type="button" name="button" value="Submit" id="button">
-		</li>
+		<li><select name="" class="reg_select">
+            <option value="Select Course">Select Course</option>
+            <option value="FE">FE</option>
+            <option value="QA">QA</option>
+            <option value="JAVA">JAVA</option>
+           </select></li>
+		<li><input type="text" name="surname" placeholder="First Name" class="reg"></li>
+		<li><input type="text" name="surname" placeholder="Last Name" class="reg"></li>
+		<li><input type="text" name="phone" placeholder="Phone" class="reg"></li>	
+		<li><input type="text" name="adress" placeholder="Adress" class="reg" id="adress"></li>
+		<li><input type="text" name="zip" placeholder="Zip" class="reg"></li>
+		<li><input type="email" name="email" placeholder="Email" class="reg"></li>
+		<li><input type="button" name="button" value="Submit" id="button"></li>
 	</ul>
-         
 </div>
 <p class="welcome">WELCOME</p>
 <p class="welcom_words">College students can publish their couse notes, study together, build their acdemic reputations....</p>
 </div>
 </div>
 </section>
-
+<section>
 <div class="cont_history">
-	<div class="cont_history_cont">
-		<p class="un_name">ABC University</p>
-		<p class="main_history_text">In 1865, Ezra Cornell founded an institution "where any person can find instruction in any study." From the beginning, all students were welcome, regardless of race, gender, ideology, or socioeco - nomic status.<br>
-
-		Today, we invite you to join our talented and diverse students and accessible faculty who, together, form a living and learning community unmatched in its breadth of opportunities.</p>
+<div class="cont_history_cont">
+	<p class="un_name">ABC University</p>
+	<p class="main_history_text">In 1865, Ezra Cornell founded an institution "where any person can find instruction in any study." From the beginning, all students were welcome, regardless of race, gender, ideology, or socioeco - nomic status.<br>
+	Today, we invite you to join our talented and diverse students and accessible faculty who, together, form a living and learning community unmatched in its breadth of opportunities.</p>
 </div>
-
+</section>
 </div>
 <div class="main_cont_top">
-	<p class="title_cont">WHY WE ARE BEST</p>
-	<div class="qa_envir">
-		<div class="build_pic"><img src="img/build.jpg"></div>
+<p class="title_cont">WHY WE ARE BEST</p>
+<div class="qa_envir">
+	<div class="build_pic"><img src="img/build.jpg"></div>
 		<p class="qa_title">QUALITY ENVIRONMENT</p>
 		<p class="qa_text">We guide our students to find their own aca-demic paths by helping them to reason, analyze and understand in unprecedented ways. The undergraduate experience at Duke is character-ized by a spirit of academic energy, exploration and challenge.</p>
-		<div class="envir_view"><a href="#"><p>VIEW</p></a></div>
-	</div>
-	<div class="qa_prog">
-	<div class="doct_pic"><img src="img/doct.jpg"></div>
+	<div class="envir_view"><a href="#"><p>VIEW</p></a></div>
+</div>
+<div class="qa_prog">
+<div class="doct_pic"><img src="img/doct.jpg"></div>
 		<p class="qa_prog_title">QUALITY PROGRAMS</p>
 		<p class="qa_prog_text">We are a research university with resources to connect undergraduate education to the processes of inquiry and discovery. Duke students explore ideas by collaborating directly with our exceptional faculty in a program of study that focuses on interdisciplinary exploration.</p>
-		<div class="qa_view"><a href="#"><p>VIEW</p></a></div>
-	</div>
-
-	<div class="ex_teacher">
-	<div class="men_pic"><img src="img/men.jpg"></div>
+	<div class="qa_view"><a href="#"><p>VIEW</p></a></div>
+</div>
+<div class="ex_teacher">
+<div class="men_pic"><img src="img/men.jpg"></div>
 	<p class="ex_title">EXCELLENT TEACHERS</p>
 	<p class="ex_text">A student's education doesn't end at the class -room door. We provide an incredible variety of opportunities for students to enhance and supplement in-class learning with hands-on experiences, service in the community—both locally and globally—and development of lead.</p>
-	<div class="ex_view"><a href="#"><p>VIEW</p></a></div>
-		</div>
+<div class="ex_view"><a href="#"><p>VIEW</p></a></div>
 </div>
-
-
-
+</div>
 <div class="main_cont_bot">
 <div class="stud_says">What Students Says About Our University</div>
-<div class="round"><img src="img/r_point.png"></div>
-<div class="round1"><img src="img/l_point.png"></div>
-
-<blockquote>
-<div class="stud_word"><p>We guide our students to find their own academic paths by helping them to reason, analyze and understand in unprecedented ways. The undergraduate experience at Duke is characterized by a spirit of academic energy, exploration and challenge.</p>
-	<cite>—Amanda Persch</cite>
-	</blockquote>
+<div class="circle">
+	<div class="round"><img src="img/r_point.png"></div>
+	<div class="round1"><img src="img/l_point.png"></div>
 </div>
-
-
-
+<blockquote>
+<div class="stud_word"><p><span class="bq">We</span> guide our students to find their own academic paths by helping them to reason, analyze and understand in unprecedented ways. The undergraduate experience at Duke is characterized by a spirit of academic energy, exploration and challenge.</p>
+	<cite>—Amanda Persch</cite>
+</blockquote>
+</div>
 <div class="clr"></div>
 <div class="bot_start">
 <div class="bot_start_cont">
-
 	<button class="bot_but"><p class="click_on_but">Click Here Now to Get Started</p></button>
 	<img src="img/y_men.jpg" class="yang_men">
 	</div>
 </div>
-
 <footer>
 <div class="foot_cont">
-	<div class="bot_logo">
+<div class="bot_logo">
 <div class="logo_bot">ABC</div><p class="un_bot_name">ABC University</p>
-
 </div>
 <div class="social_network_bot">
-	<p class="p_connect_bot">Connect:</p>
+<p class="p_connect_bot">Connect:</p>
 <ul class="sn">
-		<li class="fb"></li>
-		<li class="g"></li>
-		<li class="tw"></li>
+	<li class="fb"></li>
+	<li class="g"></li>
+	<li class="tw"></li>
 </ul>
 </div>
 <div class="lic">© 2014 by ABC UNIVERSITY OF LIFE. Proudly created with unbounce.com. Design by Design-What.com</div>
 </div>
-</div>
-
-	
 </footer>
-
-
-
 </body>
 </html>
