--- a/Project2/index.html
+++ b/Project2/index.html
@@ -52,7 +52,7 @@
 <div class="cont_history">
 <div class="cont_history_cont">
 	<p class="un_name">ABC University</p>
-	<p class="main_history_text">In 1865, Ezra Cornell founded an institution "where any person can find instruction in any study." From the beginning, all students were welcome, regardless of race, gender, ideology, or socioeco - nomic status.<br>
+	<p class="main_history_text">In 1865, Ezra Cornell founded an institution "where any person can find instruction in any study." From the beginning, all students were welcome, regardless of race, gender, ideology, or socioeco - nomic status.<br><br>
 	Today, we invite you to join our talented and diverse students and accessible faculty who, together, form a living and learning community unmatched in its breadth of opportunities.</p>
 </div>
 </section>
@@ -63,19 +63,19 @@
 	<div class="build_pic"><img src="img/build.jpg"></div>
 		<p class="qa_title">QUALITY ENVIRONMENT</p>
 		<p class="qa_text">We guide our students to find their own aca-demic paths by helping them to reason, analyze and understand in unprecedented ways. The undergraduate experience at Duke is character-ized by a spirit of academic energy, exploration and challenge.</p>
-	<div class="envir_view"><a href="#"><p>VIEW</p></a></div>
+	<div class="envir_view"><p>VIEW</p></div>
 </div>
 <div class="qa_prog">
 <div class="doct_pic"><img src="img/doct.jpg"></div>
 		<p class="qa_prog_title">QUALITY PROGRAMS</p>
 		<p class="qa_prog_text">We are a research university with resources to connect undergraduate education to the processes of inquiry and discovery. Duke students explore ideas by collaborating directly with our exceptional faculty in a program of study that focuses on interdisciplinary exploration.</p>
-	<div class="qa_view"><a href="#"><p>VIEW</p></a></div>
+	<div class="qa_view"><p>VIEW</p></div>
 </div>
 <div class="ex_teacher">
 <div class="men_pic"><img src="img/men.jpg"></div>
 	<p class="ex_title">EXCELLENT TEACHERS</p>
 	<p class="ex_text">A student's education doesn't end at the class -room door. We provide an incredible variety of opportunities for students to enhance and supplement in-class learning with hands-on experiences, service in the community—both locally and globally—and development of lead.</p>
-<div class="ex_view"><a href="#"><p>VIEW</p></a></div>
+<div class="ex_view"><p>VIEW</p></div>
 </div>
 </div>
 <div class="main_cont_bot">
@@ -86,7 +86,7 @@
 </div>
 <blockquote>
 <div class="stud_word"><p><span class="bq">We</span> guide our students to find their own academic paths by helping them to reason, analyze and understand in unprecedented ways. The undergraduate experience at Duke is characterized by a spirit of academic energy, exploration and challenge.</p>
-	<cite>—Amanda Persch</cite>
+	<cite>— Amanda Persch</cite>
 </blockquote>
 </div>
 <div class="clr"></div>
