--- a/Ukrbud/index.html
+++ b/Ukrbud/index.html
@@ -8,76 +8,122 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div id="wrapper">
 <header>
-<div class="header_cont">
-	<div class="logo_name">
-	<span class="l_name">Укрбуддом</span> современные строительные технологии
-	<p class="logo_text">Все начинается с мысли...</p>
+<div class="header-cont">
+	<div class="logo-name">
+	<span class="l-name">Укрбуддом</span> современные строительные технологии
 </div>
-<div class="logo"><a href="#"><img src="img/logo.jpg"></a></div>
 
+<div class="logo"><a href="#"><img src="img/logo.jpg"></a></div>
+<!--NAVIGATION-->
+<div class="clr"></div>
+
+	
 </div>
 </header>
-<div class="main_container">
-<div class="content">
-<!--SLIDER_TOP-->
-<div class="slider_top">
-	<div class="m_slider0">
-		<a href="#"><img src="img/m_slider0.jpg" alt="Просчет проэкта"></a>
-	</div>
-		<div class="m_slider1">
-		<a href="#"><img src="img/m_slider1.jpg" alt="Проэкт"></a>
-	</div>
-		<div class="m_slider2">
-		<a href="#"><img src="img/m_slider2.jpg"></a>
-	</div>
-	</div>
-	<div class="clr"></div>
-	<!--NAVIGATION-->
-	<nav>
-		<div class="nav_bar">
-		<ul>
-		<li><a href="#">Главная</a></li>
-		<li><a href="#">Проэкты</a></li>
-		<li><a href="#">Строительные работы</a>
-		<ul id="drop_menu">
-			<li class="drop_item"><a href="#">Бетонирование</a></li>
-			<li class="drop_item"><a href="#">Ремонт ангаров, цехов</a></li>
-			<li class="drop_item"><a href="#">Перекрытие крыши</a></li>
-		</ul>
-		</li>
-		<li class="list_item"><a href="#">О нас</a></li>
-		<li class="list_item"><a href="#">Контакты</a></li>
-	</ul>
-		
-		</div>
-		<div class="social_net">
-			<ul>
-				<li class="fb"><a href="#"><img src="img/33.png" width="24px" height="24px"></a></li>
-				<li class="g"><a href="#"><img src="img/21.png"></a></li>
-				<li class="tw"><a href="#"><img src="img/11.png"></a></li>
-			</ul>
-		</div>
-	</nav>
-	<!--SLIDER_BOTTOM-->
-	<div class="slider_bot">
-
-		<div class="m_slider3">
-		<a href="#"><img src="img/m_slider3.jpg"></a>
-	</div>
-		<div class="m_slider4">
-		<a href="#"><img src="img/m_slider4.jpg"></a>
-	</div>
-		<div class="m_slider5">
-		<a href="#"><img src="img/m_slider5.jpg"></a>
-	</div>
-	</div>
-	</div>
+	  <div id="nav">
+        <ul>
+            <li><a href="#"><span>Главная</span></a></li>
+            <li><a href="#"><span>Проэкты</span></a></li>
+            <li class="dropdown"><a href="#"><span>Строительные работы</span></a>
+                <ul>
+                    <li><a href="concreting.html"><span>Беторинование</span></a></li>
+                    <li><a href="repair.html"><span>Ремонт ангаров, цехов</span></a></li>
+                    <li><a href="roof.html"><span>Перекрытие крыши</span></a></li>
+                </ul>
+            </li>
+            <li class=><a href="about.html"><span>О нас</span></a> </li>
+            <li><a href="contacts.html"><span>Контакты</span></a></li>
+        </ul>
+    </div>
+<div class="container">
+		<div class="item item-type-move">
+		<a class="item-hover" href="http://dribbble.com/shots/1313878-Hand-Lettering-Process" target="_blank">
+			<div class="item-info">
+				<div class="headline">
+					Прием заказов 
+					<div class="line"></div>
+				</div>
+				<div class="downline">От малых до больших</div>							
+			</div>
+			<div class="mask"></div>
+		</a>
+		<div class="item-img"><img src="img/1.jpg" alt="" /></div>
+	</div>	
+	
+	<div class="item item-type-move">
+		<a class="item-hover" href="http://dribbble.com/shots/710530-Living-Stream" target="_blank">
+			<div class="item-info">
+				<div class="headline">
+					Просчет вашего заказа
+					<div class="line"></div>
+				</div>
+				<div class="downline">Учет всех пожеланий</div>							
+			</div>
+			<div class="mask"></div>
+		</a>
+		<div class="item-img"><img src="img/2.jpg" alt="" /></div>
+	</div>	
+	
+	<div class="item item-type-move">
+		<a class="item-hover" href="http://dribbble.com/shots/567217-TwoSolid" target="_blank">
+			<div class="item-info">
+				<div class="headline">
+					Проэктирование
+					<div class="line"></div>
+				</div>
+				<div class="downline">Согласование плана</div>							
+			</div>
+			<div class="mask"></div>
+		</a>
+		<div class="item-img"><img src="img/3.jpg" alt="" /></div>
+	</div>	
+	
+	<div class="item item-type-move">
+		<a class="item-hover" href="http://dribbble.com/shots/511831-zeal-tea" target="_blank">
+			<div class="item-info">
+				<div class="headline">
+					Подписание договора
+					<div class="line"></div>
+				</div>
+				<div class="downline">Долгосрочный или единоразовый</div>							
+			</div>
+			<div class="mask"></div>
+		</a>
+		<div class="item-img"><img src="img/4.jpg" alt="" /></div>
+	</div>	
+	
+	<div class="item item-type-move">
+		<a class="item-hover" href="http://dribbble.com/shots/961627-Austin" target="_blank">
+			<div class="item-info">
+				<div class="headline">
+					Генподряд
+					<div class="line"></div>
+				</div>
+				<div class="downline">Полное сопровождение</div>							
+			</div>
+			<div class="mask"></div>
+		</a>
+		<div class="item-img"><img src="img/5.jpg" alt="" /></div>
+	</div>	
+	
+	<div class="item item-type-move">
+		<a class="item-hover" href="http://dribbble.com/shots/1435298-Jivoy-Live" target="_blank">
+			<div class="item-info">
+				<div class="headline">
+					Успех
+					<div class="line"></div>
+				</div>
+				<div class="downline">Отличный результат</div>							
+			</div>
+			<div class="mask"></div>
+		</a>
+		<div class="item-img"><img src="img/6.jpg" alt="" /></div>
+	</div>	
 </div>
 <!--FOOTER-->
 <footer>
-	<div class="footer_cont">
+	<div class="footer-cont">
 		<div class="contacts">
 			<p>Украина, 03061, м. Киев ул. Мироновская, 56</p> 
 			<a href="mailto:office@ukrbuddim.com">office@ukrbuddim.com</a>
@@ -87,12 +133,6 @@
 </div>
 		<div class="telephone"><p>тел. 044 531 886 0</p></div>
 	</div>
-	
-</footer>
-
-
-
-
-</div>
+	</footer>
 </body>
 </html>
