--- a/Project2/index.html
+++ b/Project2/index.html
@@ -11,29 +11,29 @@
 	<div class="logo">ABC</div>
 	<div class="logo_name">ABC University</div>
 	<div class="social_network">
-		<p class="p_connect">Connect:</p>
+		<div class="p_connect">Connect:</div>
 			<ul class="sn">
 				<li class="fb"></li>
 				<li class="g"></li>
 				<li class="tw"></li>
 			</ul>
-	</div>
+		</div>
 </div>
 </header>
-
-<!--BANNER-->
 <section>
 <div class="banner">
 <div class="banner_cont">
 <div class="reg_form">
 <p class="reg_title">GET STARTED</p>
 	<ul>
-		<li><select name="" class="reg_select">
+		<li>
+			<select name="" class="reg_select">
             <option value="Select Course">Select Course</option>
             <option value="FE">FE</option>
             <option value="QA">QA</option>
             <option value="JAVA">JAVA</option>
-           </select></li>
+           </select>
+		</li>
 		<li><input type="text" name="surname" placeholder="First Name" class="reg"></li>
 		<li><input type="text" name="surname" placeholder="Last Name" class="reg"></li>
 		<li><input type="text" name="phone" placeholder="Phone" class="reg"></li>	
@@ -54,8 +54,6 @@
 	<p class="un_name">ABC University</p>
 	<p class="main_history_text">In 1865, Ezra Cornell founded an institution "where any person can find instruction in any study." From the beginning, all students were welcome, regardless of race, gender, ideology, or socioeco - nomic status.<br><br>
 	Today, we invite you to join our talented and diverse students and accessible faculty who, together, form a living and learning community unmatched in its breadth of opportunities.</p>
-</div>
-</section>
 </div>
 <div class="main_cont_top">
 <p class="title_cont">WHY WE ARE BEST</p>
@@ -78,21 +76,21 @@
 <div class="ex_view"><p>VIEW</p></div>
 </div>
 </div>
-<div class="main_cont_bot">
+<section class="main_cont_bot">
 <div class="stud_says">What Students Says About Our University</div>
 <div class="circle">
 	<div class="round"><img src="img/r_point.png"></div>
 	<div class="round1"><img src="img/l_point.png"></div>
 </div>
-<blockquote>
+<section>
 <div class="stud_word"><p><span class="bq">We</span> guide our students to find their own academic paths by helping them to reason, analyze and understand in unprecedented ways. The undergraduate experience at Duke is characterized by a spirit of academic energy, exploration and challenge.</p>
 	<cite>— Amanda Persch</cite>
-</blockquote>
 </div>
+</section>
 <div class="clr"></div>
 <div class="bot_start">
 <div class="bot_start_cont">
-	<button class="bot_but"><p class="click_on_but">Click Here Now to Get Started</p></button>
+	<button class="bot_but"><div class="click_on_but">Click Here Now to Get Started</div></button>
 	<img src="img/y_men.jpg" class="yang_men">
 	</div>
 </div>
