--- a/Ternovsky/index.html
+++ b/Ternovsky/index.html
@@ -11,14 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+ 			<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="shortcut icon" href="../favicon.ico"> 
      		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/elastislide.css" />
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
 		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css' />
+		<link rel="stylesheet" href="assets/fonts/CountryWestern_Open.ttf" />
 		<noscript>
 			<style>
 				.es-carousel ul{
@@ -59,6 +59,7 @@
 							<li><a href="#one">Наш продукт</a></li>
 							<li><a href="#two">О нас</a></li>
 							<li><a href="#work">Наши работы</a></li>
+							<li><a href="#work">Каталог и цены</a></li>
 							<li><a href="#tech">О технологии</a></li>
 							<li><a href="#contact">Контакты</a></li>
 						</ul>
@@ -179,7 +180,7 @@
 				<a href="#contact" class="button style2 down anchored">Next</a>
 			</section>
 		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
+			<section id="contact" class="main style4 secondary">
 				<div class="content container">
 					<header>
 						<h2>Контакты</h2>
