--- a/GuestHouse/index.html
+++ b/GuestHouse/index.html
@@ -80,21 +80,21 @@
 		</div>
 		</li>
 		<li>
-		<img src="images/beach1.jpg" alt="image02" class="responsiveslide">
+		<img src="images/plyazh.jpg" alt="image02" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Наслаждаться</h2>
 			<h3>Морем</h3>
 		</div>
 		</li>
 		<li>
-		<img src="images/beach.jpg" alt="image03" class="responsiveslide">
+		<img src="images/plyazh1.jpg" alt="image03" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Наслаждаться</h2>
 			<h3>Пляжами</h3>
 		</div>
 		</li>
 		<li>
-		<img src="images/house.jpg" alt="image04" class="responsiveslide">
+		<img src="images/dom.jpg" alt="image04" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Наслаждаться</h2>
 			<h3>Уютом</h3>
