--- a/GuestHouse/index.html
+++ b/GuestHouse/index.html
@@ -68,7 +68,7 @@
 </div>
 <div class="clear">
 </div>
-<!-- SLIDER 
+<!-- SLIDER
 ================================================== -->
 <div id="ei-slider" class="ei-slider">
 	<ul class="ei-slider-large">
@@ -83,14 +83,14 @@
 		<img src="images/plyazh.jpg" alt="image02" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Наслаждаться</h2>
-			<h3>Морем</h3>
+			<h3>Мореv</h3>
 		</div>
 		</li>
 		<li>
 		<img src="images/plyazh1.jpg" alt="image03" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Наслаждаться</h2>
-			<h3>Пляжами</h3>
+			<h3>Пляжем</h3>
 		</div>
 		</li>
 		<li>
